src/objects/Historico_Estados_Profesional__c.object
<CustomObject>
    <description>Representa el histórico de todos los cambios de estados por los que pasa el profesional</description>
    <fields>
        <fullName>HEP_CAS_Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HEP_DAT_Fecha__c</fullName>
        <description>Representa la fecha del cambio de estado</description>
        <label>Fecha</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HEP_LKP_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Representa el lookup al profesional Contrato vinculado</description>
        <label>Profesional Contrato</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Históricos Estados Profesional</relationshipLabel>
        <relationshipName>Historicos_Estados_Profesional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HEP_LKP_Recurso_Servicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Representa el lookup al Recurso de Servicio vinculado</description>
        <label>Recurso de servicio</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Históricos Estados Profesional</relationshipLabel>
        <relationshipName>Historicos_Estados_Profesional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HEP_SEL_Estado__c</fullName>
        <description>Representa el estado de cada cambio registrado en el ciclo de vida de un Profesional Contrato o Recurso de Servicio</description>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Estado_Profesional</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HEP_TXT_Motivo_Baja__c</fullName>
        <description>Representa los motivos de baja definitivos o temporales</description>
        <label>Motivo de Baja</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HEP_TXT_Observaciones__c</fullName>
        <description>Representa las observaciones de una baja temporal o definitiva</description>
        <label>Observaciones</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Histórico Estados Profesional</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Nombre de Histórico Estados Profesional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos Estados Profesional</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>